--- a/jetsencloud/build.gradle
+++ b/jetsencloud/build.gradle
@@ -33,4 +33,5 @@ dependencies {
 
 
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
 }
