--- a/jetsencloud/src/main/AndroidManifest.xml
+++ b/jetsencloud/src/main/AndroidManifest.xml
@@ -30,13 +30,13 @@
             android:screenOrientation="landscape" />
 
         <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="${applicationId}.provider"
+            android:name="com.chanlin.jetsencloud.HFileProvider"
+            android:authorities="${applicationId}.read_provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
+                android:resource="@xml/the_file_path" />
         </provider>
         <provider
             android:name=".database.DatabaseProvider"
